# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: __init__.py  arg_parser.py  comparator.py  core.py  diff.py  file_parser.py  parser.py  stylish.py
gendiff/formatters/: __init__.py  format_selection.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
test/: test_generate_diff.py
tests/: test_generate_diff.py
tests/fixtures/: expected_json_output.txt
